/* Copyright 2025 The OpenXLA Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package xla;

import "xla/stream_executor/blas.proto";
import "xla/xla_data.proto";

message MatrixLayoutProto {
  enum Order {
    ORDER_UNKNOWN = 0;
    ORDER_ROW_MAJOR = 1;
    ORDER_COLUMN_MAJOR = 2;
  }
  Order order = 1;
  int64 num_rows = 2;
  int64 num_cols = 3;
  int64 batch_size = 4;
  int64 leading_dim_stride = 5;
  int64 batch_stride = 6;
  xla.BlasTransposeProto transpose = 7;
  xla.PrimitiveType dtype = 8;
}

message GemmConfigProto {
  MatrixLayoutProto lhs_layout = 1;
  MatrixLayoutProto rhs_layout = 2;
  MatrixLayoutProto c_layout = 3;
  MatrixLayoutProto output_layout = 4;
  double alpha_real = 5;
  double alpha_imag = 6;
  double beta = 7;
  int64 compute_precision = 8;
  xla.PrecisionConfig.Algorithm precision_algorithm = 9;
  optional int64 algorithm = 10;
  bool grad_x = 11;
  bool grad_y = 12;
  xla.BlasComputationTypeProto compute_type = 13;
}

message GroupedGemmConfigProto {
  uint64 m = 1;
  uint64 n = 2;
  uint64 k = 3;
  uint64 batch_count = 4;
  uint64 group_count = 5;
  MatrixLayoutProto lhs_layout = 6;
  MatrixLayoutProto rhs_layout = 7;
  MatrixLayoutProto c_layout = 8;
  MatrixLayoutProto output_layout = 9;
  double alpha_real = 10;
  double alpha_imag = 11;
  double beta = 12;
  xla.PrimitiveType type_a = 13;
  xla.PrimitiveType type_b = 14;
  xla.PrimitiveType type_c = 15;
  xla.PrimitiveType type_d = 16;
  int64 lhs_contracting_dimension = 17;
  int64 rhs_contracting_dimension = 18;
  int64 lhs_ragged_dimension = 19;
  optional int64 rhs_group_dimension = 20;
  int64 lhs_stride_ragged_dim = 21;
  int64 rhs_stride_group_dim = 22;
  int64 output_stride_ragged_dim = 23;
  xla.PrecisionConfig.Algorithm precision_algorithm = 24;
  int64 compute_precision = 25;
  RaggedDotModeProto ragged_mode = 26;
  xla.BlasComputationTypeProto compute_type = 27;
}

enum BlasLtEpilogueProto {
  EPILOGUE_DEFAULT = 0;
  EPILOGUE_RELU = 1;
  EPILOGUE_BIAS = 2;
  EPILOGUE_BIAS_THEN_RELU = 3;
  EPILOGUE_GELU = 4;
  EPILOGUE_SILU = 5;
  EPILOGUE_SILU_WITH_AUX = 6;
  EPILOGUE_GELU_WITH_AUX = 7;
  EPILOGUE_BIAS_THEN_GELU = 8;
  EPILOGUE_BIAS_THEN_SILU = 9;
  EPILOGUE_BIAS_THEN_GELU_WITH_AUX = 10;
  EPILOGUE_BIAS_THEN_SILU_WITH_AUX = 11;
}


enum RaggedDotModeProto {
  RAGGED_NON_CONTRACTING = 0;
  RAGGED_CONTRACTING = 1;
  RAGGED_BATCH = 2;
}